--- a/thesis_luab558.client/src/styles.css
+++ b/thesis_luab558.client/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #f0f0f0;
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  min-height: 90vh;
+}
