--- a/thesis_luab558.client/src/app/app.component.html
+++ b/thesis_luab558.client/src/app/app.component.html
@@ -1,83 +1,2 @@
-<!--<h1 id="tableLabel">Weather forecast</h1>
-
-<p>This component demonstrates fetching data from the server.</p>
-
-<p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
-
-<table *ngIf="forecasts">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let forecast of forecasts">
-            <td>{{ forecast.date }}</td>
-            <td>{{ forecast.temperatureC }}</td>
-            <td>{{ forecast.temperatureF }}</td>
-            <td>{{ forecast.summary }}</td>
-        </tr>
-    </tbody>
-</table>-->
-
+<app-header></app-header>
 <app-mainpage></app-mainpage>
-
-<!-- <h1>Produkte</h1>
-<table *ngIf="products.length > 0">
-  <thead>
-    <tr>
-      <th>Produktname</th>
-      <th>Preis</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let product of products">
-      <td>{{ product.productName }}</td>
-      <td>{{ product.price | currency }}</td>
-    </tr>
-  </tbody>
-</table>
-
-<h1>Benutzer</h1>
-<table *ngIf="users.length > 0">
-  <thead>
-    <tr>
-      <th>Vorname</th>
-      <th>Nachname</th>
-      <th>E-Mail</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let user of users">
-      <td>{{ user.firstName }}</td>
-      <td>{{ user.lastName }}</td>
-      <td>{{ user.email }}</td>
-    </tr>
-  </tbody>
-</table>
-
-<h1>Bewertungen</h1>
-<table *ngIf="reviews.length > 0">
-  <thead>
-    <tr>
-      <th>Bewertung</th>
-      <th>Text</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let review of reviews">
-      <td>{{ review.rating }}</td>
-      <td>{{ review.reviewText }}</td>
-    </tr>
-  </tbody>
-</table>
-
-<h1>Bilder</h1>
-<ul *ngIf="images.length > 0">
-  <li *ngFor="let image of images">
-    Bild-ID: {{ image.imageId }}
-  </li>
-</ul>-->
