Implement footer component

--- a/thesis_luab558.client/src/app/app.component.html
+++ b/thesis_luab558.client/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
-<app-mainpage></app-mainpage>
+<div class="container">
+  <app-mainpage></app-mainpage>
+</div>
+<app-footer></app-footer>
