--- a/thesis_luab558.client/src/app/app.component.css
+++ b/thesis_luab558.client/src/app/app.component.css
@@ -1,4 +1,4 @@
-﻿:host {
+/*:host {
     max-width: 1280px;
     padding: 2rem;
     text-align: center;
@@ -12,3 +12,4 @@ th, td {
 table {
     margin: 0 auto;
 }
+*/
