Finish Footer with href componens, add routing and stylize css

--- a/thesis_luab558.client/src/app/services/footer/footer.component.css
+++ b/thesis_luab558.client/src/app/services/footer/footer.component.css
@@ -1,6 +1,6 @@
 footer {
-  background-color: #343a40; /* Dunkles Hintergrund */
-  color: white; /* Textfarbe */
+  background-color: #343a40;
+  color: white;
 }
 
   footer a {
