--- a/thesis_luab558.client/src/app/app.component.css
+++ b/thesis_luab558.client/src/app/app.component.css
@@ -1,15 +1,5 @@
-/*:host {
-    max-width: 1280px;
-    padding: 2rem;
-    text-align: center;
+.container {
+  /*min-height: calc(100vh - 150px);*/
+  min-height: 85vh;
 }
 
-th, td {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-table {
-    margin: 0 auto;
-}
-*/
