Increase performance of ProductPage by decreasing getter calls to db

--- a/thesis_luab558.client/src/app/services/mainpage/mainpage.component.html
+++ b/thesis_luab558.client/src/app/services/mainpage/mainpage.component.html
@@ -44,7 +44,11 @@
               <p class="card-text">{{ product.description }}</p>
             </div>
             <div class="card-footer text-center">
-              <button class="btn btn-dark" [routerLink]="['/product', product.productId]">Zum Produkt</button>
+              <!--<button class="btn btn-dark" [routerLink]="['/product', product.productId]">Zum Produkt</button>-->
+              <button class="btn btn-dark"
+                      [routerLink]="['/product', product.productName, product.color, product.ram, product.physicalMemory]">
+                Zum Produkt
+              </button>
             </div>
           </div>
         </div>
