--- a/thesis_luab558.client/src/app/services/productpage/productpage.component.css
+++ b/thesis_luab558.client/src/app/services/productpage/productpage.component.css
@@ -75,3 +75,86 @@
 button {
     margin-right: 10px;
 }
+
+/*review*/
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Halbtransparenter Hintergrund */
+  z-index: 999; /* Popup bleibt über allem */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup {
+  z-index: 1000; /* Popup selbst bleibt vor dem Overlay */
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+
+  .popup.show {
+    display: block;
+  }
+
+.popup-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.popup-close {
+  cursor: pointer;
+}
+
+.star-ratings {
+  display: flex;
+  align-items: center;
+}
+
+.progress-bar {
+  height: 20px;
+}
+
+progress::-webkit-progress-bar {
+  background-color: #f3e7e7;
+}
+
+progress::-webkit-progress-value {
+  background-color: #ff9900;
+}
+  
+.reviews {
+  margin-top: 30px;
+}
+
+.review {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+#review-card {
+  margin-top: 40px;
+}
+
+.star-rating {
+  line-height: 27px;
+  font-size: 1.25em; /* Größere Sterne */
+}
+
+.star-rating .fa-star {
+  color: black; /* Inaktive Sterne */
+  margin-right: 3px;
+}
+
+  .star-rating .fa-star.checked {
+    color: orange; /* Aktive Sterne */
+  }
+
