--- a/thesis_luab558.client/src/app/services/mainpage/mainpage.component.html
+++ b/thesis_luab558.client/src/app/services/mainpage/mainpage.component.html
@@ -10,7 +10,8 @@
       <div *ngFor="let image of bannerImages; let i = index"
            class="carousel-item"
            [class.active]="i === 0">
-        <img [src]="image" class="d-block mx-auto img-fluid" alt="Slide Image">
+        <img [src]="image" class="d-block mx-auto img-fluid" alt="Slide Image"
+             [routerLink]="['/product/iPhone 14 Pro/Lila/6/128']">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselMain" data-bs-slide="prev">
@@ -35,6 +36,7 @@
             <div class="image-container">
               <img class="card-img-top"
                    [src]="product.imageUrl"
+                   [routerLink]="['/product', product.productName, product.color, product.ram, product.physicalMemory]"
                    alt="Bild konnte nicht geladen werden" />
             </div>
             <div class="card-body text-center border-top">
