--- a/thesis_luab558.client/src/app/services/cart/cart.component.html
+++ b/thesis_luab558.client/src/app/services/cart/cart.component.html
@@ -31,7 +31,7 @@
               </div>
             </div>
             <div class="col-md-2 offset-lg-1">
-              <h5 class="mb-0">{{ item.quantity * item.product.price | currency:'EUR' }}</h5>
+              <h5 class="mb-0">{{ item.quantity * item.product.price | currency:'EUR':'symbol':'1.0-2' }}</h5>
             </div>
             <div class="col-md-1 text-end">
               <button class="btn btn-link text-danger" (click)="removeFromCart(item.productId)">
@@ -50,16 +50,20 @@
         <div class="card-body">
           <ul class="list-group list-group-flush">
             <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-              Artikel <span>{{ totalPrice | currency:'EUR' }}</span>
+              Artikel <span>{{ totalPrice | currency:'EUR':'symbol':'1.0-2' }}</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
               Lieferkosten
-              <span *ngIf="!isFreeShipping()">{{ shippingCost | currency:'EUR' }}</span>
-              <span *ngIf="isFreeShipping()">Lieferung ist gratis</span>
+              <span *ngIf="!isFreeShipping()">{{ shippingCost | currency:'EUR':'symbol':'1.0-2' }}</span>
+              <span *ngIf="isFreeShipping()">Gratis</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
               <div><strong>Gesamtbetrag</strong></div>
-              <span><strong>{{ totalPrice + shippingCost | currency:'EUR' }}</strong></span>
+              <span>
+                <strong>
+                  {{ totalPrice + (isFreeShipping() ? 0 : shippingCost) | currency:'EUR':'symbol':'1.0-2' }}
+                </strong>
+              </span>
             </li>
           </ul>
           <button class="btn btn-primary btn-lg btn-block">zur Kasse gehen</button>
