--- a/thesis_luab558.client/src/app/services/mainpage/mainpage.component.css
+++ b/thesis_luab558.client/src/app/services/mainpage/mainpage.component.css
@@ -46,3 +46,8 @@
   #carouselMain .carousel-item img:hover {
     cursor: pointer;
   }
+
+.carousel-control-prev, .carousel-control-next {
+  width: auto;
+  padding: 0;
+}
