--- a/thesis_luab558.client/src/app/services/mainpage/mainpage.component.html
+++ b/thesis_luab558.client/src/app/services/mainpage/mainpage.component.html
@@ -27,7 +27,7 @@
 
   <div class="container mt-5">
     <div *ngFor="let category of categories" class="category-section">
-      <h2 class="category-title text-center">{{ category }}</h2>
+      <h2 class="category-title text-center">{{ category }}s</h2>
       <hr />
       <div class="row mt-5">
         <div *ngFor="let product of products[category]"
