--- a/thesis_luab558.client/src/app/components/header/header.component.html
+++ b/thesis_luab558.client/src/app/components/header/header.component.html
@@ -39,7 +39,7 @@
                 <tr>
                   <td style='color:white;'>E-Mail:</td>
                   <td>
-                    <input type="text" [(ngModel)]="email" style="border-radius: 10px; background-color: #f5f5f5;">
+                    <input type="text" name="email" style="border-radius: 10px; background-color: #f5f5f5;">
                   </td>
                 </tr>
                 <tr>
@@ -48,7 +48,7 @@
                 <tr>
                   <td style='color:white;'>Passwort:</td>
                   <td>
-                    <input type="password" [(ngModel)]="password" style="border-radius: 10px; background-color: #f5f5f5;">
+                    <input type="password" name="password" style="border-radius: 10px; background-color: #f5f5f5;">
                   </td>
                 </tr>
                 <tr>
